0.175

- Require at least one stream for HTTP/2 in HTTP server.
- Fix /v1/jmx HTML page loading in modern browsers.

0.174

- Add configuration properties to include/exclude HTTPS cipher suites for
  the HTTP client.

0.173

- Fix double logging bug in HTTP client.
- Update to Jetty 9.4.12.v20180830.
- Update the default value of the "http-server.https.excluded-cipher" config
  property to match Jetty's default excluded cipher suites. Specifically, all
  ciphers without forward secrecy, and all ciphers that use the RSA key exchange 
  algorithm are excluded by default. Consequently, TLS 1.0 or TLS 1.1 are no
  longer supported by default.

0.172

- Update to Jetty 9.4.12.RC0.
- Add support for PKCS #1 private keys to PemReader.

0.171

- Periodically flush HTTP server and HTTP client logs.
- Fix HTTP client to preserve User-Agent when following redirects.
- Make following redirects configurable for HTTP client.
- Allow HTTP client to preserve Authorization when following redirects.
- Improve error message for unsupported key types in PemReader.
- Ensure there is a certificate that matches the private key in PemReader.

0.170

- Improve error handling for HTTP client and HTTP server PEM files.
- Add additional columns to the HTTP client and server logs. The new columns
  provide detailed timing information for individual requests/responses.
- Update to Jetty 9.4.11.v20180605.

0.169

- Fix configuration error messages for prefixed configs.
- Add support for PEM encoded (PKCS #8) keystore and truststore to the
  HTTP client and server.
- Add avg to TimeDistribution stat.

0.168

- Update to Jetty 9.4.10.RC1.
- Add SSL session timeout and SSL session cache size config parameters
  to HTTP server.

0.167

- Add loadPublicKey to PemReader.

0.166

- Update to Guava 24.1 and Guice 4.2.
- Bind HttpServerConfig in TestingHttpServerModule to allow for HTTPS testing.

0.165

- Add log buffer size config to HTTP client.